--- a/.gitconfig
+++ b/.gitconfig
@@ -8,3 +8,7 @@
   editor = vim -f
 [push]
   default = current
+[filter "lfs"]
+	clean = git-lfs clean %f
+	smudge = git-lfs smudge %f
+	required = true
