Add git tag sorting

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,9 @@
 [push]
   default = current
 [filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
 	required = true
+[tag]
+	sort = version:refname
